--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 		/>
 
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+		<meta name="theme-color" content="#D2D1C9" />
+		<link rel="manifest" href="./manifest.json" />
+		<link rel="icon" type="image/svg+xml" href="/src/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
+
+		<title>Jakub Koper | Front End Developer</title>
 	</head>
 	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
